5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4349/executions/1596_842.log
== TEST (2019-03-26 18:55:22) 
-- CODE:
entrada= 3141
primeiro digito= entrada//1000

-- ERROR:
File "XXXX", line 2
    primeiro digito= entrada//1000
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:55:23) 
-- CODE:
entrada= 3141
primeiro digito= entrada//1000

-- EXECUTION TIME:
0.122207
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 2
    primeiro digito= entrada//1000
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:55:32) 
-- CODE:
entrada = 3141
primeiro digito = entrada//1000

-- ERROR:
File "XXXX", line 2
    primeiro digito = entrada//1000
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:55:33) 
-- CODE:
entrada = 3141
primeiro digito = entrada//1000

-- EXECUTION TIME:
0.150995
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 2
    primeiro digito = entrada//1000
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:55:33) 
-- CODE:
entrada = 3141
primeiro digito = entrada//1000

-- EXECUTION TIME:
0.129472
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 2
    primeiro digito = entrada//1000
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:55:51) 
-- CODE:
entrada = 3141
primeiro digito = entrada//1000
print(primeiro digito)

-- ERROR:
File "XXXX", line 2
    primeiro digito = entrada//1000
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:56:07) 
-- CODE:
entrada = 3141
primeiro digito = entrada//1000

print(primeiro digito)

-- ERROR:
File "XXXX", line 2
    primeiro digito = entrada//1000
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:57:33) 
-- CODE:
#a funcao int() retorna um inteiro
entrada = input("numero de quatro digitos:"))
primeiro digito = entrada//1000

print(primeiro digito)

-- ERROR:
File "XXXX", line 2
    entrada = input())
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:57:48) 
-- CODE:
#a funcao int() retorna um inteiro
entrada = int("numero de quatro digitos:"))
primeiro digito = entrada//1000

print(primeiro digito)

-- ERROR:
File "XXXX", line 2
    entrada = int("numero de quatro digitos:"))
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:58:06) 
-- CODE:
#a funcao int() retorna um inteiro
entrada = int(input("numero de quatro digitos:"))
primeiro digito = entrada//1000

print(primeiro digito)

-- ERROR:
File "XXXX", line 3
    primeiro digito = entrada//1000
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:59:18) 
-- CODE:
#a funcao int() retorna um inteiro
entrada = int(input("numero de quatro digitos:"))
primeiro digito = entrada//1000
print(primeiro digito)
soma dos digitos= primeiro digito + seg dig + ter dig + q dig
print(soma dos digitos)
-- ERROR:
File "XXXX", line 3
    primeiro digito = entrada//1000
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:59:26) 
-- CODE:
#a funcao int() retorna um inteiro
entrada = int(input("numero de quatro digitos:"))
primeiro digito= entrada//1000
print(primeiro digito)
soma dos digitos= primeiro digito + seg dig + ter dig + q dig
print(soma dos digitos)
-- ERROR:
File "XXXX", line 3
    primeiro digito= entrada//1000
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:59:28) 
-- CODE:
#a funcao int() retorna um inteiro
entrada = int(input("numero de quatro digitos:"))
primeiro digito= entrada//1000
print(primeiro digito)
soma dos digitos= primeiro digito + seg dig + ter dig + q dig
print(soma dos digitos)
-- EXECUTION TIME:
0.192235
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 3
    primeiro digito= entrada//1000
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:59:46) 
-- CODE:
#a funcao int() retorna um inteiro
entrada = int(input("numero de quatro digitos:"))
primeiro digito= entrada // 1000
print(primeiro digito)
soma dos digitos= primeiro digito + seg dig + ter dig + q dig
print(soma dos digitos)
-- ERROR:
File "XXXX", line 3
    primeiro digito= entrada // 1000
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:00:07) 
-- CODE:
#a funcao int() retorna um inteiro
entrada = int(input("numero de quatro digitos:"))
primeiro digito= entrada // 1000
print(primeiro digito)
soma dos digitos= primeiro digito + seg dig + ter dig + q dig
print(soma dos digitos)
-- EXECUTION TIME:
0.166799
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 3
    primeiro digito= entrada // 1000
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:00:07) 
-- CODE:
#a funcao int() retorna um inteiro
entrada = int(input("numero de quatro digitos:"))
primeiro digito= entrada // 1000
print(primeiro digito)
soma dos digitos= primeiro digito + seg dig + ter dig + q dig
print(soma dos digitos)
-- ERROR:
File "XXXX", line 3
    primeiro digito= entrada // 1000
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:00:09) 
-- CODE:
#a funcao int() retorna um inteiro
entrada = int(input("numero de quatro digitos:"))
primeiro digito= entrada // 1000
print(primeiro digito)
soma dos digitos= primeiro digito + seg dig + ter dig + q dig
print(soma dos digitos)
-- EXECUTION TIME:
0.1368
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 3
    primeiro digito= entrada // 1000
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:00:10) 
-- CODE:
#a funcao int() retorna um inteiro
entrada = int(input("numero de quatro digitos:"))
primeiro digito= entrada // 1000
print(primeiro digito)
soma dos digitos= primeiro digito + seg dig + ter dig + q dig
print(soma dos digitos)
-- ERROR:
File "XXXX", line 3
    primeiro digito= entrada // 1000
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:00:25) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeiro digito= entrada // 1000
print(primeiro digito)
soma dos digitos= primeiro digito + seg dig + ter dig + q dig
print(soma dos digitos)
-- ERROR:
File "XXXX", line 3
    primeiro digito= entrada // 1000
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:04:47) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeiro digito= entrada // 1000
print(primeiro digito)
segundo digito= entrada // 1000
print(segundo digito)
terceiro digito= entrada // 1000
print(terceiro digito)
quarto digito= entrada // 1000
print( quarto digito)
soma dos digitos= primeiro digito + seg dig + ter dig + q dig
print(soma dos digitos)

-- ERROR:
File "XXXX", line 3
    primeiro digito= entrada // 1000
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:05:00) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeiro digito= entrada // 1000
print(primeiro digito)
segundo digito= entrada // 1000
print(segundo digito)
terceiro digito= entrada // 1000
print(terceiro digito)
quarto digito= entrada // 1000
print(quarto digito)
soma dos digitos= primeiro digito + seg dig + ter dig + q dig
print(soma dos digitos)

-- ERROR:
File "XXXX", line 3
    primeiro digito= entrada // 1000
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:06:52) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeiro digito= entrada // 1000
print(primeiro digito)
segundo digito= entrada // 1000
print(segundo digito)
terceiro digito= entrada // 1000
print(terceiro digito)
quarto digito= entrada // 1000
print(quarto digito)
soma dos digitos= primeiro digito + segundo digito + terceiro digito + quarto digito
print(soma dos digitos)

-- ERROR:
File "XXXX", line 3
    primeiro digito= entrada // 1000
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:07:02) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeiro digito)
segundo digito= entrada // 1000
print(segundo digito)
terceiro digito= entrada // 1000
print(terceiro digito)
quarto digito= entrada // 1000
print(quarto digito)
soma dos digitos= primeiro digito + segundo digito + terceiro digito + quarto digito
print(soma dos digitos)

-- ERROR:
File "XXXX", line 4
    print(primeiro digito)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:07:09) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundo digito= entrada // 1000
print(segundo digito)
terceiro digito= entrada // 1000
print(terceiro digito)
quarto digito= entrada // 1000
print(quarto digito)
soma dos digitos= primeiro digito + segundo digito + terceiro digito + quarto digito
print(soma dos digitos)

-- ERROR:
File "XXXX", line 5
    segundo digito= entrada // 1000
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:07:13) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundo digito)
terceiro digito= entrada // 1000
print(terceiro digito)
quarto digito= entrada // 1000
print(quarto digito)
soma dos digitos= primeiro digito + segundo digito + terceiro digito + quarto digito
print(soma dos digitos)

-- ERROR:
File "XXXX", line 6
    print(segundo digito)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:07:17) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceiro digito= entrada // 1000
print(terceiro digito)
quarto digito= entrada // 1000
print(quarto digito)
soma dos digitos= primeiro digito + segundo digito + terceiro digito + quarto digito
print(soma dos digitos)

-- ERROR:
File "XXXX", line 7
    terceiro digito= entrada // 1000
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:07:20) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceiro digito= entrada // 1000
print(terceiro digito)
quarto digito= entrada // 1000
print(quarto digito)
soma dos digitos= primeiro digito + segundo digito + terceiro digito + quarto digito
print(soma dos digitos)

-- ERROR:
File "XXXX", line 7
    terceiro digito= entrada // 1000
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:07:28) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundo_digito)
terceiro digito= entrada // 1000
print(terceiro digito)
quarto digito= entrada // 1000
print(quarto digito)
soma dos digitos= primeiro digito + segundo digito + terceiro digito + quarto digito
print(soma dos digitos)

-- ERROR:
File "XXXX", line 7
    terceiro digito= entrada // 1000
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:07:39) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceiro_digito= entrada // 1000
print(terceiro digito)
quarto digito= entrada // 1000
print(quarto digito)
soma dos digitos= primeiro digito + segundo digito + terceiro digito + quarto digito
print(soma dos digitos)

-- ERROR:
File "XXXX", line 8
    print(terceiro digito)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:07:53) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
soma dos digitos= primeiro digito + segundo digito + terceiro digito + quarto digito
print(soma dos digitos)

-- ERROR:
File "XXXX", line 11
    soma dos digitos= primeiro digito + segundo digito + terceiro digito + quarto digito
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:07:55) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
soma dos digitos= primeiro digito + segundo digito + terceiro digito + quarto digito
print(soma dos digitos)

-- EXECUTION TIME:
0.221383
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 11
    soma dos digitos= primeiro digito + segundo digito + terceiro digito + quarto digito
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:07:59) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeiro digito + segundo digito + terceiro digito + quarto digito
print(soma dos digitos)

-- ERROR:
File "XXXX", line 11
    somadosdigitos= primeiro digito + segundo digito + terceiro digito + quarto digito
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:08:06) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeirodigito + segundo digito + terceiro digito + quarto digito
print(soma dos digitos)

-- ERROR:
File "XXXX", line 11
    somadosdigitos= primeirodigito + segundo digito + terceiro digito + quarto digito
                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:08:15) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(soma dos digitos)

-- ERROR:
File "XXXX", line 12
    print(soma dos digitos)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:08:23) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- OUTPUT:
9
9
9
9
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:08:24) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- EXECUTION TIME:
0.188439
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
9
9
9
9
36
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
1
1
1
1
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:08:25) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- OUTPUT:
9
9
9
9
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:08:34) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- EXECUTION TIME:
0.15052
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
9
9
9
9
36
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
1
1
1
1
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:08:36) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- OUTPUT:
9
9
9
9
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:08:45) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- EXECUTION TIME:
0.1654
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
9
9
9
9
36
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
1
1
1
1
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:09:05) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeirodigito + segundo digito + terceirodigito + quartodigito
print(somadosdigitos)

-- ERROR:
File "XXXX", line 11
    somadosdigitos= primeirodigito + segundo digito + terceirodigito + quartodigito
                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:09:11) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- OUTPUT:
9
9
9
9
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:09:31) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
print= 3141
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(primeirodigito)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:09:32) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
print= 3141
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- EXECUTION TIME:
0.189962
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 5, in <module>
    print(primeirodigito)
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:09:46) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
print= ("3141")
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(primeirodigito)
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:09:47) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
print= ("3141")
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- EXECUTION TIME:
0.210821
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 5, in <module>
    print(primeirodigito)
TypeError: 'str' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:10:52) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- OUTPUT:
9
9
9
9
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:10:58) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- EXECUTION TIME:
0.20643
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
9
9
9
9
36
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
1
1
1
1
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:10:58) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- OUTPUT:
9
9
9
9
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:11:20) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada //1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- OUTPUT:
9
9
9
9
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:11:26) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- OUTPUT:
9
9
9
9
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:12:07) 
-- CODE:
#a funcao int() retorna um inteiro
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print= 3141
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(primeirodigito)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:12:57) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)
3141 // 1000
-- OUTPUT:
9
9
9
9
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:12:58) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)
3141 // 1000
-- EXECUTION TIME:
0.148301
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
9
9
9
9
36
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
1
1
1
1
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:14:18) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= 3141 // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)
-- OUTPUT:
3
9
9
9
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:14:56) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= 3141 // 1000
print= 3141 % 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(primeirodigito)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:16:19) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)
-- OUTPUT:
9
9
9
9
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:16:58) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
numero= entrada % 1000
segundodigito= entrada // 1000
print(segundodigito)
terceirodigito= entrada // 1000
print(terceirodigito)
quartodigito= entrada // 1000
print(quartodigito)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)
-- OUTPUT:
9
9
9
9
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:19:20) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
numero= entrada % 1000
print("segundo digito:" + int(numero) )
segundodigito= entrada // 1000
print(segundodigito)

terceirodigito= entrada // 1000
print(terceirodigito)

quartodigito= entrada // 1000
print(quartodigito)

somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("segundo digito:" + int(numero) )
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:36:26) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
print(primeirodigito)
numero= entrada % 1000
print("segundo digito:" + int(numero) )
segundodigito= entrada // 1000
print(segundodigito)

terceirodigito= entrada // 1000
print(terceirodigito)

quartodigito= entrada // 1000
print(quartodigito)

somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("segundo digito:" + int(numero) )
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:42:47) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
segundodigito= entrada // 1000
terceirodigito= entrada // 1000
quartodigito= entrada // 1000
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- OUTPUT:
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:42:49) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
segundodigito= entrada // 1000
terceirodigito= entrada // 1000
quartodigito= entrada // 1000
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- EXECUTION TIME:
0.201293
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
36
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:42:50) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
segundodigito= entrada // 1000
terceirodigito= entrada // 1000
quartodigito= entrada // 1000
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- OUTPUT:
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:43:41) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
segundodigito= entrada // 1000 % 100
terceirodigito= entrada // 1000 % 10
quartodigito= entrada // 1000
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- EXECUTION TIME:
0.171048
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
36
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:43:56) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
segundodigito= entrada // 1000 % 100
terceirodigito= entrada // 1000 % 10
quartodigito= entrada // 1000 % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- OUTPUT:
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:43:57) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
segundodigito= entrada // 1000 % 100
terceirodigito= entrada // 1000 % 10
quartodigito= entrada // 1000 % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- EXECUTION TIME:
0.151673
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
36
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:43:58) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
segundodigito= entrada // 1000 % 100
terceirodigito= entrada // 1000 % 10
quartodigito= entrada // 1000 % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- OUTPUT:
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:44:40) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
segundodigito= (entrada // 1000) % 100
terceirodigito= (entrada // 1000) % 10
quartodigito= (entrada // 1000) % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- OUTPUT:
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:44:42) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
segundodigito= (entrada // 1000) % 100
terceirodigito= (entrada // 1000) % 10
quartodigito= (entrada // 1000) % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- EXECUTION TIME:
0.143864
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
36
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:44:45) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
segundodigito= (entrada // 1000) % 100
terceirodigito= (entrada // 1000) % 10
quartodigito= (entrada // 1000) % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- OUTPUT:
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:44:46) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
segundodigito= (entrada // 1000) % 100
terceirodigito= (entrada // 1000) % 10
quartodigito= (entrada // 1000) % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- OUTPUT:
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:44:46) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
segundodigito= (entrada // 1000) % 100
terceirodigito= (entrada // 1000) % 10
quartodigito= (entrada // 1000) % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- OUTPUT:
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:44:47) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
segundodigito= (entrada // 1000) % 100
terceirodigito= (entrada // 1000) % 10
quartodigito= (entrada // 1000) % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- OUTPUT:
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:44:47) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
segundodigito= (entrada // 1000) % 100
terceirodigito= (entrada // 1000) % 10
quartodigito= (entrada // 1000) % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- OUTPUT:
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:44:47) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
segundodigito= (entrada // 1000) % 100
terceirodigito= (entrada // 1000) % 10
quartodigito= (entrada // 1000) % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- OUTPUT:
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:44:47) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
segundodigito= (entrada // 1000) % 100
terceirodigito= (entrada // 1000) % 10
quartodigito= (entrada // 1000) % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- OUTPUT:
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:26:00) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
segundodigito= (entrada // 1000) % 100
terceirodigito= (entrada // 1000) % 10
quartodigito= (entrada // 1000) % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- OUTPUT:
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:26:27) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
segundodigito= (entrada // 1000) % 100
terceirodigito= (entrada // 1000) % 10
quartodigito= (entrada // 1000) % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- OUTPUT:
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:31:43) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
segundodigito= % 100
terceirodigito= % 10
quartodigito= % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- ERROR:
File "XXXX", line 3
    segundodigito= % 100
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:32:18) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000 %100
segundodigito= % 100
terceirodigito= % 10
quartodigito= % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- ERROR:
File "XXXX", line 3
    segundodigito= % 100
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:34:11) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
resto= % 100
segundodigito= entrada // 1000
resto= % 100
terceirodigito= // 1000
resto= // 1000
quartodigito= % 10
resto= % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- ERROR:
File "XXXX", line 3
    resto= % 100
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:34:45) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000

segundodigito= entrada // 1000
resto= % 100
terceirodigito= // 1000
resto= // 1000
quartodigito= % 10
resto= % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- ERROR:
File "XXXX", line 5
    resto= % 100
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 08:34:54) 
-- CODE:
entrada= int(input("numero de quatro digitos:"))
primeirodigito= entrada // 1000
resto= % 100
segundodigito= entrada // 1000
resto= % 100
terceirodigito= // 1000
resto= // 1000
quartodigito= % 10
resto= % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- EXECUTION TIME:
0.152261
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 3
    resto= % 100
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:38:26) 
-- CODE:
entrada= int(input("numero de quatro digitos: "))
primeirodigito= entrada // 1000
resto= % 100
segundodigito= entrada // 1000
resto= % 100
terceirodigito= // 1000
resto= // 1000
quartodigito= % 10
resto= % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- ERROR:
File "XXXX", line 3
    resto= % 100
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:38:48) 
-- CODE:
entrada= int(input("numero de quatro digitos: "))
primeirodigito= entrada // 1000
resto= % 10
segundodigito= entrada // 1000
resto= % 100
terceirodigito= // 1000
resto= // 1000
quartodigito= % 10
resto= % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- ERROR:
File "XXXX", line 3
    resto= % 10
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:39:13) 
-- CODE:
entrada= float(input("numero de quatro digitos: "))
primeirodigito= entrada // 1000
resto= % 10
segundodigito= entrada // 1000
resto= % 100
terceirodigito= // 1000
resto= // 1000
quartodigito= % 10
resto= % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- ERROR:
File "XXXX", line 3
    resto= % 10
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:39:32) 
-- CODE:
entrada= int(input("numero de quatro digitos: "))
primeirodigito= entrada // 1000
resto= % 10
segundodigito= entrada // 1000
resto= % 100
terceirodigito= // 1000
resto= // 1000
quartodigito= % 10
resto= % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- ERROR:
File "XXXX", line 3
    resto= % 10
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:40:23) 
-- CODE:
entrada= int(input("numero de quatro digitos: "))
primeirodigito= entrada // 1000
resto=(entrada // 1000) % 100
segundodigito= entrada // 1000
resto= % 100
terceirodigito= // 1000
resto= // 1000
quartodigito= % 10
resto= % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- ERROR:
File "XXXX", line 5
    resto= % 100
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:42:18) 
-- CODE:
entrada= int(input("numero de quatro digitos: "))
primeirodigito= entrada // 1000
resto= (entrada // 1000) % 100
segundodigito= entrada // 1000
resto= (entrada // 1000) % 100
terceirodigito= // 1000
resto= (entrada // 1000) % 100
quartodigito= // 1000
resto= (entrada // 1000) % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- ERROR:
File "XXXX", line 6
    terceirodigito= // 1000
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:42:30) 
-- CODE:
entrada= int(input("numero de quatro digitos: "))
primeirodigito= entrada // 1000
resto= (entrada // 1000) % 100
segundodigito= entrada // 1000
resto= (entrada // 1000) % 100
terceirodigito= // 100
resto= (entrada // 1000) % 100
quartodigito= // 1000
resto= (entrada // 1000) % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- ERROR:
File "XXXX", line 6
    terceirodigito= // 100
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:14:49) 
-- CODE:
entrada= int(input("numero de quatro digitos: "))
primeirodigito= entrada // 1000
resto= (entrada // 1000) % 100 % 10
segundodigito= entrada // 1000
resto= (entrada // 1000) % 10
terceirodigito= // 100
resto= (entrada // 1000) % 10
quartodigito= // 1000
resto= (entrada // 1000) % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- ERROR:
File "XXXX", line 6
    terceirodigito= // 100
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:14:56) 
-- CODE:
entrada= int(input("numero de quatro digitos: "))
primeirodigito= entrada // 1000
resto= (entrada // 1000) % 100 % 10
segundodigito= entrada // 1000
resto= (entrada // 1000) % 10
terceirodigito= // 100
resto= (entrada // 1000) % 10
quartodigito= // 1000
resto= (entrada // 1000) % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- EXECUTION TIME:
0.161218
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 6
    terceirodigito= // 100
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:14:57) 
-- CODE:
entrada= int(input("numero de quatro digitos: "))
primeirodigito= entrada // 1000
resto= (entrada // 1000) % 100 % 10
segundodigito= entrada // 1000
resto= (entrada // 1000) % 10
terceirodigito= // 100
resto= (entrada // 1000) % 10
quartodigito= // 1000
resto= (entrada // 1000) % 10
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- EXECUTION TIME:
0.155223
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 6
    terceirodigito= // 100
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:18:13) 
-- CODE:
entrada= int(input("numero de quatro digitos: "))
primeirodigito= entrada // 1000
resto= (entrada // 1000 % 100 % 10)
segundodigito= entrada // 1000
resto= (entrada // 1000 % 10)
terceirodigito= // 100
resto= (entrada // 1000 % 10)
quartodigito= // 1000
resto= (entrada // 1000 % 10)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- ERROR:
File "XXXX", line 6
    terceirodigito= // 100
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:18:34) 
-- CODE:
entrada= int(input("numero de quatro digitos: "))
primeirodigito= entrada // 1000
resto= (entrada // 1000 % 100 % 10)
segundodigito= entrada // 1000
resto= (entrada // 1000 % 10)
terceirodigito= // 1000
resto= (entrada // 1000 % 10)
quartodigito= // 1000
resto= (entrada // 1000 % 10)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- ERROR:
File "XXXX", line 6
    terceirodigito= // 1000
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:21:32) 
-- CODE:
entrada= int(input("numero de quatro digitos: "))
a= int(entrada//1000%10)
b= int(entrada//100%10)
c= int(entrada//100%10)
d= int(entrada%10)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
NameError: name 'primeirodigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:21:42) 
-- CODE:
entrada= int(input("numero de quatro digitos: "))
a= int(entrada//1000%10)
b= int(entrada//100%10)
c= int(entrada//100%10)
d= int(entrada%10)
somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
print(somadosdigitos)

-- EXECUTION TIME:
0.130828
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 6, in <module>
    somadosdigitos= primeirodigito + segundodigito + terceirodigito + quartodigito
NameError: name 'primeirodigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:22:16) 
-- CODE:
entrada= int(input("numero de quatro digitos: "))
a= int(entrada//1000%10)
b= int(entrada//100%10)
c= int(entrada//100%10)
d= int(entrada%10)
somadosdigitos= a+b+c+d
print(somadosdigitos)

-- EXECUTION TIME:
0.17745
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
14
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:22:18) 
-- CODE:
entrada= int(input("numero de quatro digitos: "))
a= int(entrada//1000%10)
b= int(entrada//100%10)
c= int(entrada//100%10)
d= int(entrada%10)
somadosdigitos= a+b+c+d
print(somadosdigitos)

-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:22:30) 
-- CODE:
entrada= int(input("numero de quatro digitos: "))
a= int(entrada//1000%10)
b= int(entrada//100%10)
c= int(entrada//100%10)
d= int(entrada%10)
somadosdigitos= a+b+c+d
print(somadosdigitos)

-- EXECUTION TIME:
0.194754
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
14
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:23:30) 
-- CODE:
entrada= int(input("numero de quatro digitos: "))
a= int(entrada//1000%100%10)
b= int(entrada//100%10)
c= int(entrada//10%10)
d= int(entrada%10)
somadosdigitos= a+b+c+d
print(somadosdigitos)

-- EXECUTION TIME:
0.126732
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:01:28) 
-- CODE:
entrada= int(input("numero de quatro digitos: "))
a= int(entrada//1000%100%10)
b= int(entrada//100%10)
c= int(entrada//10%10)
d= int(entrada%10)
somadosdigitos= a+b+c+d
print(somadosdigitos)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
